# WaMi

./: .gitignore  AndroidManifest.xml  Dockerfile  README.md  addPathComments.js  analyze_drawables.sh  bitacora.md  build.gradle  cleanAndPrepComments.js  cs.js  docs.txt  gradle.properties  gradle.properties1  hardcoded_drawables.sh  install-adb.sh  local.properties  log.kt  log.txt  settings.gradle  settings.gradle.kts
.github/workflows/: android.yml
app/: app_config.json  build.gradle  build.gradle.kts  google-services.json  libraries.json  proguard-rules.pro
app/_p6_disabled/: FalsoVerdadero.kt  MainActivity.kt
app/_p6_disabled/_DEP/: Categorizer.kt  MoodWheel.kt  Player.kt  PlaylistGenerator.kt  TrackStore.kt  ValenceExtractor.kt
app/_p6_disabled/geoquiz1/: MainActivity.kt
app/_p6_disabled/lambda/: lambda.kt
app/_p6_disabled/p2/: MainActivity.kt
app/_p6_disabled/p3/: MainActivity.kt
app/_p6_disabled/p4/: MainActivity.kt
app/_p6_disabled/p5/: MainActivity.kt
app/_p6_disabled/p6/: MainActivity.kt
app/resonance/: MainActivity.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mel_filterbank.cpp  mel_filterbank.h  native_mel.cpp
app/srcJETPACK/main/: AndroidManifest.xml
app/u/resonance/: MainActivity.kt  ValenceExtractor.kt  ValenceResult.kt
gradle/wrapper/: gradle-wrapper.properties
src/main/: AndroidManifest.xml  addPathComments.js
src/main/res/color/: nav_item_color.xml
src/main/res/drawable/: bg_bubble_in.xml  bg_bubble_out.xml  bg_incoming.xml  bg_incoming_message.xml  bg_message_bubble.xml  bg_outgoing.xml  (+21 more)
(+322 files in other folders)
